# dark_side

./: CMakeLists.txt  README.md
app/: main.cpp
include/: Buffer.h  client.h  convert.h  database.h  database_redactor.h  encrypt.h  file_sharing.h  header.h  log.h  server.h  ui.h  user-odb.cxx  user-odb.hxx  user-odb.ixx  user.h  user_interface.h
sources/: client.cpp  convert.cpp  database.cpp  database_redactor.cpp  encrypt.cpp  file_sharing.cpp  log.cpp  server.cpp  source.cpp  ui.cpp
working_examples/user_10000/: private_10000  user_info
working_examples/user_1747/: private_1747  user_info
working_examples/user_1747/accepted_files/: hello_world
working_examples/user_625/: private_625  user_info  users.db
working_examples/user_625/accepted_files/: hello_world_txt
working_examples/user_625/public_keys/: public_k_10000.txt  public_k_1747.txt  public_k_625.txt
